Fix height with jquery

--- a/index.html
+++ b/index.html
@@ -70,12 +70,6 @@
               Go to <a href="http://v1.ripper234.com/">v1.ripper234.com</a> for older content of this blog.
               </div>
 		  </div>
-            
-          <div class="mastfoot">
-            <div class="inner">
-              <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-            </div>
-          </div>
         </div>
 
       </div>
@@ -84,4 +78,5 @@
 	
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="main.js"></script>
 </body>
