--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="cover-container">
 
           <div class="masthead clearfix">
-            <div class="inner">
+            <div id='top' class="inner">
               <h3 class="masthead-brand">Ron Gross</h3>
               <nav>
                 <ul class="nav masthead-nav">
