--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
           <div id='rows'>
             <div id="iam" class="row">
-                <ul>
+                <ul class='cloud'>
                     <li><a href='https://www.facebook.com/ripper234'>Ron</a></li>
                     <li><a href='https://github.com/ripper234'>Developer</a></li>
                     <li><a href='#'>Product Manager</a></li>
