Not looking for a job

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
             
             <div id="looking" class="row">
-			I'm looking for a job.
+			I'm looking to found/join new ventures as a co-founder or first employee.
 		  </div>
 		
 		  <div id="contact" class="row">
