Link to Linkedin instead

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           </div>
 
           <div id="cv" class="row">
-            CV Coming Soon
+            CVs are such a bother to maintain... please check out <a href='https://www.linkedin.com/in/ripper234/'>my Linkedin instead</a>.
           </div>
 
           <div id="archive" class="row">
