Fix broken #about link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
 
         <div id='rows'>
-          <div id="iam" class="row">
+          <div id="about" class="row">
             <ul class='cloud'>
               <li><a href='https://www.facebook.com/ripper234'>Ron</a></li>
               <li><a href='https://github.com/ripper234'>Developer</a></li>
