Remove links that don't go anywhere

--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
             <ul class='cloud'>
               <li><a href='https://www.facebook.com/ripper234'>Ron</a></li>
               <li><a href='https://github.com/ripper234'>Developer</a></li>
-              <li><a href='#'>Product Manager</a></li>
-              <li><a href='#'>Leader</a></li>
+              <li>Product Manager</li>
+              <li>Leader</li>
               <li><a href='https://tinyletter.com/ripper234'>Blogger</a></li>
               <li><a href='http://burningman.org/culture/philosophical-center/10-principles/'>Burner</a></li>
-              <li><a href='#'>Open</a></li>
-              <li><a href='#CV'>Get Things Done</a></li>
-              <li><a href='#'>Experienced</a></li>
-              <li><a href='#'>Dreamer</a></li>
+              <li>Open</li>
+              <li><a href='/#cv'>Get Things Done</a></li>
+              <li>Experienced</li>
+              <li>Dreamer</li>
             </ul>
           </div>
 
