Change email address

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </div>
 
           <div id="contact" class="row">
-            chiefninjaofficer@gmail.com
+            ron.gross@gmail.com
           </div>
 
           <div id="cv" class="row">
