More prominent link to blog

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <nav>
               <ul class="nav masthead-nav">
                 <li class="active"><a href="#about">about</a></li>
-                <li><a href="#looking">looking</a></li>
+                <li><a href="#blog">blog</a></li>
                 <li><a href="#contact">contact</a></li>
                 <li><a href="#cv">cv</a></li>
                 <li><a href="#archive">archive</a></li>
@@ -70,8 +70,8 @@
             </ul>
           </div>
 
-          <div id="looking" class="row">
-            I'm looking to found/join new ventures as a co-founder or first employee.
+          <div id="blog" class="row">
+            I blog at <a href='https://medium.com/@ripper234'>https://medium.com/@ripper234</a>
           </div>
 
           <div id="contact" class="row">
