--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
           </div>
 
           <div id="blog" class="row">
-            I blog at <a href='https://medium.com/@ripper234'>https://medium.com/@ripper234</a>
+            I blog at <a href='https://medium.com/@ripper234'>Medium</a>, 
+            <a href='https://tinyletter.com/ripper234'>subscribe by email</a> (less than 1 email a month)
           </div>
 
           <div id="contact" class="row">
