--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div>
 
           <div id="blog" class="row">
-            I blog at <a href='https://medium.com/@ripper234'>Medium</a>, 
+            I blog at <a href='https://medium.com/@ripper234'>Medium</a><br/><br/>
             <a href='https://tinyletter.com/ripper234'>subscribe by email</a> (less than 1 email a month)
           </div>
 
