--- a/index.html
+++ b/index.html
@@ -71,8 +71,15 @@
           </div>
 
           <div id="blog" class="row">
-            I blog at <a href='https://medium.com/@ripper234'>Medium</a><br/><br/>
-            <a href='https://tinyletter.com/ripper234'>subscribe by email</a> (less than 1 email a month)
+            <ul>
+              <li>
+                Blog at <a href='https://medium.com/@ripper234'>Medium</a><br/>
+                <a href='https://tinyletter.com/ripper234'>subscribe by email</a> (less than 1 email a month)
+              </li>
+              <li>
+                Short live videos on <a href='https://www.facebook.com/Ron-Daily-1776091905767385'>Ron Daily on Facebook</a> (a few minutes each)
+              </li>
+            </ul>
           </div>
 
           <div id="contact" class="row">
