Short URL to Ron Daily

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <a href='https://tinyletter.com/ripper234'>subscribe by email</a> (less than 1 email a month)
               </li>
               <li>
-                Short live videos on <a href='https://www.facebook.com/Ron-Daily-1776091905767385'>Ron Daily on Facebook</a> (a few minutes each)
+                Short live videos on <a href='https://fb.me/RonDaily234'>Ron Daily on Facebook</a> (a few minutes each)
               </li>
             </ul>
           </div>
