--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
           <div id="about" class="row">
             <h1>New Website Coming Soon!</h1>
             <h2>Angel Investor & Advisor</h2>
-            <h3>Looking to invest in tech startups that make a positive dent on the world</h3>
+            <h3>Investing in startups that make a positive dent on the world</h3>
+            <br/><br/><br/><br/><!--- TODO Yes this is ugly as hell -->
             <ul class='cloud'>
               <li><a href='https://www.facebook.com/ripper234'>Ron</a></li>
               <li><a href='https://github.com/ripper234'>Developer</a></li>
