--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
             <h1>New Website Coming Soon!</h1>
             <h2>Angel Investor & Advisor</h2>
             <h3>Investing in startups that make a positive dent on the world</h3>
-            <br/><br/><br/><br/><!--- TODO Yes this is ugly as hell -->
-            <ul class='cloud'>
+            <ul class='cloud' style='margin-top: 100px'>
               <li><a href='https://www.facebook.com/ripper234'>Ron</a></li>
               <li><a href='https://github.com/ripper234'>Developer</a></li>
               <li>Product Manager</li>
